test/fail/type_error/incorrect_argument_count2.amla
func three(x: str, y: str, z: str) {}

func bad() {
	three("one", "two");
}
